Refatorando Layout_activity/item_pacote.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Alura Viagens</string>
+    <string name="banner_inicial_dos_pacotes">banner inicial dos pacotes</string>
 </resources>
