--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="realizar_pagamento">Realizar pagamento</string>
     <string name="imagem_do_pacote">imagem do pacote</string>
     <string name="imagem_do_resumo">imagem_do_resumo</string>
+    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzç ABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
+    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
+    <string name="valor_da_compra">Valor da compra:</string>
+    <string name="numero_do_cartao">Número do cartão</string>
+    <string name="mes_cartao">MM</string>
+    <string name="ano_cartao">AA</string>
+    <string name="cvc_pagamento">cvc</string>
+    <string name="finalizar_compra">Finalizar compra</string>
+    <string name="nome_no_cartao">Nome no cartão</string>
 </resources>
